show forum reaction tooltips on mobile https://github.com/Siderite/lichessTools/issues/1651

--- a/tools/chatForumBlogs/tool.css
+++ b/tools/chatForumBlogs/tool.css
@@ -41,3 +41,7 @@ body.lichessTools button.lichessTools-deleteImage:before {
   content: var(--icon-X);
   color: red;
 }
+
+body.lichessTools.mobile .reactions:not(:focus-within) div.lichessTools-reactionsTooltip {
+  display:none;
+}
